--- a/src/app/landing2/about2/about2.component.html
+++ b/src/app/landing2/about2/about2.component.html
@@ -33,7 +33,7 @@
       >
         <div class="about-image-wrapper">
           <img
-            src="../../../assets/layout/images/KARES_PIC1.png"
+            src="assets/layout/images/KARES_PIC1.png"
             alt="About Kares Investments"
             class="img-fluid about-main-image"
           />
