--- a/src/app/layout/app.toolbar.component.scss
+++ b/src/app/layout/app.toolbar.component.scss
@@ -6,3 +6,8 @@
     display: flex;
     align-items: center;
 }
+
+.p-menu-list{
+    margin-bottom: 0px !important;
+    padding-left: 0rem !important;
+}
