--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,7 @@
 
 /* PrimeNG Theme*/
 @import "../node_modules/primeng/resources/themes/lara-light-indigo/theme.css";
-@import "../node_modules/primeng/resources/themes/bootstrap4-dark-blue/theme.css";
+// @import "../node_modules/primeng/resources/themes/bootstrap4-dark-blue/theme.css";
 
 /* Application SCSS */
 @import "assets/layout/styles/layout/layout.scss";
