--- a/src/app/admin/user-transactions/user-transactions.component.html
+++ b/src/app/admin/user-transactions/user-transactions.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-3">
     <div class="input-group">
-      <label class="input-label" for="userContext">User:</label>
+      <!-- <label class="input-label" for="userContext">User:</label> -->
       <app-user-dropdown
         id="userContext"
         name="userContext"
