--- a/src/app/landing2/home2/home2.component.scss
+++ b/src/app/landing2/home2/home2.component.scss
@@ -4,7 +4,7 @@
   position: relative;
   background: linear-gradient(135deg, #1e293b 0%, #334155 100%);
   color: white;
-  padding: 7rem 0 7rem;
+  padding: 4.5rem 0 4.5rem;
   overflow: hidden;
   margin-top: 60px;
   &::before {
@@ -127,16 +127,23 @@
   // New Dashboard Style
   .hero-dashboard {
     position: relative;
-    background: rgba(255, 255, 255, 0.95);
+    // background: rgba(255, 255, 255, 0.95);
     border-radius: 1.5rem;
     box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
     color: #334155;
-    padding: 1.5rem;
-    margin-left: 2rem;
+    // padding: 1.5rem;
+    // margin-left: 2rem;
     backdrop-filter: blur(10px);
     z-index: 2;
-    height: 100%;
-    min-height: 400px;
+    // height: 100%;
+    // min-height: 400px;
+  }
+
+  .about-main-image {
+    border-radius: 1rem;
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+    position: relative;
+    z-index: 2;
   }
 
   .dashboard-header {
@@ -834,9 +841,10 @@
 
 // CTA Section
 .secure-section {
-  padding: 6rem 0;
+  padding: 2rem 0;
   position: relative;
-  background: linear-gradient(135deg, #1e293b 0%, #334155 100%);
+  // background: linear-gradient(135deg, #1e293b 0%, #334155 100%);
+  background: white;
 
   .secure-content {
     h2 {
@@ -844,13 +852,15 @@
       font-weight: 700;
       margin-bottom: 1.5rem;
       // color: var(--text-color);
-      color: white;
+      color: var(--text-color-secondary);
+      // color: white;
     }
 
     p {
       font-size: 1.2rem;
       // color: var(--text-color-secondary);
-      color:white;
+      // color:white;
+      color: var(--text-color-secondary);
       margin-bottom: 2rem;
       max-width: 650px;
       margin-left: auto;
