removed mock charts

--- a/src/app/user/user-dashboard.component.html
+++ b/src/app/user/user-dashboard.component.html
@@ -26,7 +26,7 @@
       <div class="card-content">
         <div class="stat-row">
           <span class="stat-label">Total Investment:</span>
-          <span class="stat-value">{{ userStats.totalInvestment }}</span>
+          <span class="stat-value">$ {{userStats.totalInvestment }}</span>
         </div>
         <div class="stat-row">
           <span class="stat-label">No of Dividends Paid:</span>
@@ -34,7 +34,7 @@
         </div>
         <div class="stat-row">
           <span class="stat-label">Dividends total:</span>
-          <span class="stat-value">{{ userStats.totalDividendsPaid }}</span>
+          <span class="stat-value">$ {{ userStats.totalDividendsPaid }}</span>
         </div>
         <div class="stat-row">
           <span class="stat-label">Return on Investment:</span>
