--- a/src/app/admin/user-transactions/user-transactions.component.html
+++ b/src/app/admin/user-transactions/user-transactions.component.html
@@ -6,7 +6,7 @@
         id="userContext"
         name="userContext"
         [userIdFromContext]="userFromContext.userId"
-        (emitSelectedUser)="setUserDetails($event)"
+        (emitSelectedUser)="setUserDetails($event, true)"
       ></app-user-dropdown>
     </div>
   </div>
@@ -48,7 +48,7 @@
       [paginator]="true"
       [rows]="10"
       responsiveLayout="scroll"
-      [globalFilterFields]="['userName', 'email']"
+      [globalFilterFields]="['userName', 'email', 'amount','transactionType', 'transactionCategory', 'paymentMode', 'portfolioName']"
     >
       <ng-template pTemplate="caption">
         <div class="flex">
@@ -134,10 +134,10 @@
   </div>
 </div>
 
-<form #transactionForm="ngForm" (ngSubmit)="saveTransaction(transactionForm)">
+<!-- <form #transactionForm="ngForm" (ngSubmit)="saveTransaction(transactionForm)">
   <p-dialog
     [(visible)]="userTransactionDialog"
-    [style]="{ width: '40vw' }"
+    [style]="{ width: '45vw' }"
     header="Add/Edit User Transaction"
     [modal]="true"
     styleClass="p-fluid"
@@ -245,8 +245,6 @@
         </div>
         <div class="field col">
           <label for="amount">Amount</label>
-          <!-- <p-inputNumber [(ngModel)]="userTransaction.amount" name="amount" mode="currency" inputId="amount"
-                        currency="USD" currencyDisplay="code" locale="en-US" /> -->
           <p-inputNumber
             [(ngModel)]="userTransaction.amount"
             inputId="amount"
@@ -282,6 +280,163 @@
         [disabled]="transactionForm.invalid"
         (onClick)="saveTransaction(transactionForm)"
       />
+    </ng-template>
+  </p-dialog>
+</form> -->
+<form #transactionForm="ngForm" (ngSubmit)="saveTransaction(transactionForm)">
+  <p-dialog
+    [(visible)]="userTransactionDialog"
+    [style]="{ width: '45vw' }"
+    header="Add/Edit User Transaction"
+    [modal]="true"
+    styleClass="p-fluid"
+    [focusOnShow]="false"
+  >
+    <ng-template pTemplate="content">
+      <div class="formgrid grid mb-2">
+        <div class="field col">
+          <label for="user">User</label>
+          <app-user-dropdown
+            id="user"
+            name="user"
+            (emitSelectedUser)="setUserDetails($event, false)"
+            *ngIf="!isEditMode"
+            [userIdFromContext]="userFromContext.userId"
+          ></app-user-dropdown>
+          <input
+            type="text"
+            pInputText
+            id="user"
+            name="user"
+            [ngModel]="userTransaction.userName"
+            *ngIf="isEditMode"
+            disabled
+            class="input"
+          />
+        </div>
+
+        <div class="field col">
+          <label for="transactionDate"
+            >Transaction Date<span class="text-danger"> *</span></label
+          >
+          <p-calendar
+            id="transactionDate"
+            name="transactionDate"
+            [(ngModel)]="userTransaction.transactionDate"
+            [showIcon]="true"
+            [showOnFocus]="true"
+            inputId="buttondisplay"
+            dateFormat="mm/dd/yy"
+            [showTime]="false"
+            [dataType]="'date'"
+            required
+          ></p-calendar>
+        </div>
+      </div>
+
+      <div class="formgrid grid mb-2">
+        <div class="field col">
+          <label for="transactionTypeId">Transaction Type<span class="text-danger"> *</span></label>
+          <p-dropdown
+            [options]="lookupData.transactionTypes"
+            name="transactionTypeId"
+            [(ngModel)]="userTransaction.transactionTypeId"
+            optionLabel="transactionTypeName"
+            optionValue="transactionTypeId"
+            placeholder="Select Transaction Type"
+            appendTo="body"
+            [showClear]="true"
+            (onChange)="filterCategories()"
+            required
+          ></p-dropdown>
+        </div>
+
+        <div class="field col">
+          <label for="transactionCategoryId">Transaction Category<span class="text-danger"> *</span></label>
+          <p-dropdown
+            [options]="filteredCategories"
+            name="transactionCategoryId"
+            [(ngModel)]="userTransaction.transactionCategoryId"
+            optionLabel="transactionCatgName"
+            optionValue="transactionCatgId"
+            placeholder="Select Category"
+            appendTo="body"
+            required
+          ></p-dropdown>
+        </div>
+      </div>
+
+      <div class="formgrid grid mb-2">
+        <div class="field col">
+          <label for="userPortfolioId">Portfolio</label>
+          <p-dropdown
+            [options]="lookupData.portfolios"
+            name="portfolioId"
+            [(ngModel)]="userTransaction.portfolioId"
+            optionLabel="portfolioName"
+            optionValue="portfolioId"
+            placeholder="Select Portfolio"
+            appendTo="body"
+          ></p-dropdown>
+        </div>
+        <div class="field col"></div>
+      </div>
+
+      <div class="formgrid grid mb-2">
+        <div class="field col">
+          <label for="paymentModeId">Payment Mode<span class="text-danger"> *</span></label>
+          <p-dropdown
+            [options]="lookupData.paymentMethods"
+            name="paymentModeId"
+            [(ngModel)]="userTransaction.paymentModeId"
+            optionLabel="paymentModeName"
+            optionValue="paymentModeId"
+            placeholder="Payment Type"
+            appendTo="body"
+            required
+          ></p-dropdown>
+        </div>
+
+        <div class="field col">
+          <label for="amount">Amount<span class="text-danger"> *</span></label>
+          <p-inputNumber
+            [(ngModel)]="userTransaction.amount"
+            inputId="amount"
+            name="amount"
+            prefix="$"
+            mode="decimal" [minFractionDigits]="0" [maxFractionDigits]="2"
+            required
+          ></p-inputNumber>
+        </div>
+      </div>
+
+      <div class="field">
+        <label for="remarks">Remarks</label>
+        <textarea
+          id="remarks"
+          name="remarks"
+          pInputTextarea
+          [(ngModel)]="userTransaction.remarks"
+          rows="3"
+          cols="20"
+        ></textarea>
+      </div>
+    </ng-template>
+
+    <ng-template pTemplate="footer">
+      <p-button
+        label="Cancel"
+        icon="pi pi-times"
+        [text]="true"
+        (onClick)="hideDialog()"
+      ></p-button>
+
+      <p-button
+        label="Save"
+        icon="pi pi-check"
+        [disabled]="transactionForm.invalid"
+        (onClick)="saveTransaction(transactionForm)"
+      ></p-button>
     </ng-template>
   </p-dialog>
 </form>
