--- a/src/app/admin/admin-home/admin-home.component.scss
+++ b/src/app/admin/admin-home/admin-home.component.scss
@@ -172,7 +172,7 @@
   gap: 1.5rem;
 
   @media (min-width: 992px) {
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1.5fr 2fr 2fr;
   }
 }
 
@@ -305,12 +305,12 @@
   }
 
   .highcharts-column-series .highcharts-point {
-    fill: var(--primary-color);
+    // fill: var(--primary-color);
     stroke-width: 0;
     transition: opacity 0.2s;
 
     &:hover {
-      fill: var(--primary-color);
+      // fill: var(--primary-color);
       opacity: 0.8;
     }
   }
