--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -43,7 +43,7 @@
           <th>Phone No</th>
           <th>City</th>
           <th>Country</th>
-          <th>User Name</th>
+          <th>Status</th>
           <th>View</th>
         </tr>
       </ng-template>
@@ -56,7 +56,14 @@
           <td>{{ user.phoneNo | phoneFormat }}</td>
           <td>{{ user.city }}</td>
           <td>{{ user.country }}</td>
-          <td>{{ user.userName }}</td>
+          <td>
+            <p-button 
+              [icon]="user.isActive ? 'pi pi-check-circle' : 'pi pi-times-circle'" 
+              [label]="user.isActive ? 'Active' : 'Inactive'" 
+              [severity]="user.isActive ? 'info' : 'warning'" 
+              (onClick)="changeUserStatus(user)">
+            </p-button>
+          </td>
           <td>
             <p-button
               icon="pi pi-user-edit"
@@ -95,7 +102,7 @@
   <p-dialog
     [(visible)]="userDialog"
     [style]="{ width: '550px' }"
-    header="Add User"
+    header="Add/Edit User"
     [modal]="true"
     styleClass="p-fluid"
   >
